--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <body>
 <div class="ratio ratio-9x19">
     <div class="map-responsive">
-   <iframe src="https://www.google.com/maps/d/embed?mid=1moGBjyi4w7Ht1lUfJZplRCQ_bzZ9ty0&ehbc=2E312F" width="640" height="480" frameborder="0" style="border:0" allowfullscreen></iframe>
+   <iframe src="https://www.google.com/maps/d/embed?mid=1moGBjyi4w7Ht1lUfJZplRCQ_bzZ9ty0&ehbc=2E312F" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 </div>
 </div>
 </body>
